# NetworkOptimization

./: .gitignore  CMakeLists.txt  LOG  README.md  client  server
Baseline/: server
Benchmark/: CMakeLists.txt  Makefile  client  client.c  client.h  server  server.c  server.h
LowLatencyProtocols/: Makefile  client1.txt  client2.txt  dynamic_array.h  ib_functions.c  ib_functions.h  kv_api.c  kv_api.h  main.c  server
Optimization/: CMakeLists.txt  Makefile  bw_template.c  ibv_api.c  ibv_api.h  ibv_pingpong.c  server
Recources/: bw_template.c
Resources/1/: Makefile  client.cpp  server.cpp  utils.h
Resources/2/: Makefile  bw_template.c  utils.h
Resources/3/: Makefile  kv_store_final.c  utils.h
